--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome: ^5.10.1
   material_design_icons_flutter: ^6.0.7096
+  firebase_auth: ^4.4.0
+  keyboard_visibility: ^0.5.6
 
 dev_dependencies:
   flutter_test:
